draft mceliece+ section

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -682,3 +682,178 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@misc{DBLP:journals/tches/RaviRCB20,
+      author = {Prasanna Ravi and Sujoy Sinha Roy and Anupam Chattopadhyay and Shivam Bhasin},
+      title = {Generic Side-channel attacks on {CCA}-secure lattice-based {PKE} and {KEM} schemes},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2019/948},
+      year = {2019},
+      url = {https://eprint.iacr.org/2019/948}
+}
+
+@misc{DBLP:conf/crypto/00010N20,
+      author = {Qian Guo and Thomas Johansson and Alexander Nilsson},
+      title = {A key-recovery timing attack on post-quantum primitives using the Fujisaki-Okamoto transformation and its application on {FrodoKEM}},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2020/743},
+      year = {2020},
+      url = {https://eprint.iacr.org/2020/743}
+}
+
+@techreport{Hoffstein1999,
+  author       = {Jeffrey Hoffstein and Joseph H. Silverman},
+  title        = {Reaction attacks against the NTRU public key cryptosystem},
+  institution  = {NTRU Technical Report},
+  year         = {1999},
+  url          = {https://ntru.org/resources.shtml},
+  note         = {Available at \url{https://ntru.org/resources.shtml}}
+}
+
+
+@inproceedings{DBLP:conf/crypto/JaulmesJ00,
+  author       = {{\'{E}}liane Jaulmes and
+                  Antoine Joux},
+  editor       = {Mihir Bellare},
+  title        = {A Chosen-Ciphertext Attack against {NTRU}},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2000, 20th Annual International
+                  Cryptology Conference, Santa Barbara, California, USA, August 20-24,
+                  2000, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1880},
+  pages        = {20--35},
+  publisher    = {Springer},
+  year         = {2000},
+  url          = {https://doi.org/10.1007/3-540-44598-6\_2},
+  doi          = {10.1007/3-540-44598-6\_2},
+  timestamp    = {Tue, 14 May 2019 10:00:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/JaulmesJ00.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{cryptoeprint:2019/1022,
+      author = {Jintai Ding and Joshua Deaton and Kurt Schmidt and Vishakha and Zheng Zhang},
+      title = {A Simple and Efficient Key Reuse Attack on {NTRU} Cryptosystem},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2019/1022},
+      year = {2019},
+      url = {https://eprint.iacr.org/2019/1022}
+}
+
+@misc{cryptoeprint:2021/168,
+      author = {Xiaohan Zhang and Chi Cheng and Ruoyu Ding},
+      title = {Small Leaks Sink a Great Ship: An Evaluation of Key Reuse Resilience of {PQC} Third Round Finalist {NTRU}-{HRSS}},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2021/168},
+      year = {2021},
+      url = {https://eprint.iacr.org/2021/168}
+}
+
+
+@inproceedings{DBLP:conf/asiacrypt/Guo0S16,
+  author       = {Qian Guo and
+                  Thomas Johansson and
+                  Paul Stankovski},
+  editor       = {Jung Hee Cheon and
+                  Tsuyoshi Takagi},
+  title        = {A Key Recovery Attack on {MDPC} with {CCA} Security Using Decoding
+                  Errors},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2016 - 22nd International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Hanoi, Vietnam, December 4-8, 2016, Proceedings, Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {10031},
+  pages        = {789--815},
+  year         = {2016},
+  url          = {https://doi.org/10.1007/978-3-662-53887-6\_29},
+  doi          = {10.1007/978-3-662-53887-6\_29},
+  timestamp    = {Sun, 12 Nov 2023 02:15:36 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/Guo0S16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/icics/HallGS99,
+  author       = {Chris Hall and
+                  Ian Goldberg and
+                  Bruce Schneier},
+  editor       = {Vijay Varadharajan and
+                  Yi Mu},
+  title        = {Reaction Attacks against several Public-Key Cryptosystems},
+  booktitle    = {Information and Communication Security, Second International Conference,
+                  ICICS'99, Sydney, Australia, November 9-11, 1999, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1726},
+  pages        = {2--12},
+  publisher    = {Springer},
+  year         = {1999},
+  url          = {https://doi.org/10.1007/978-3-540-47942-0\_2},
+  doi          = {10.1007/978-3-540-47942-0\_2},
+  timestamp    = {Tue, 14 May 2019 10:00:37 +0200},
+  biburl       = {https://dblp.org/rec/conf/icics/HallGS99.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{NIST_PQC_Evaluation,
+  author       = {{National Institute of Standards and Technology (NIST)}},
+  title        = {Post-Quantum Cryptography Standardization: Security Evaluation Criteria},
+  year         = {n.d.},
+  url          = {https://csrc.nist.gov/projects/post-quantum-cryptography/post-quantum-cryptography-standardization/evaluation-criteria/security-(evaluation-criteria)},
+  note         = {Accessed: 2025-01-20}
+}
+
+
+@inproceedings{DBLP:conf/ctrsa/HaleviR04,
+  author       = {Shai Halevi and
+                  Phillip Rogaway},
+  editor       = {Tatsuaki Okamoto},
+  title        = {A Parallelizable Enciphering Mode},
+  booktitle    = {Topics in Cryptology - {CT-RSA} 2004, The Cryptographers' Track at
+                  the {RSA} Conference 2004, San Francisco, CA, USA, February 23-27,
+                  2004, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2964},
+  pages        = {292--304},
+  publisher    = {Springer},
+  year         = {2004},
+  url          = {https://doi.org/10.1007/978-3-540-24660-2\_23},
+  doi          = {10.1007/978-3-540-24660-2\_23},
+  timestamp    = {Tue, 14 May 2019 10:00:52 +0200},
+  biburl       = {https://dblp.org/rec/conf/ctrsa/HaleviR04.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{cryptoeprint:2024/1049,
+      author = {Daniel J. Bernstein and Karthikeyan Bhargavan and Shivam Bhasin and Anupam Chattopadhyay and Tee Kiah Chia and Matthias J. Kannwischer and Franziskus Kiefer and Thales Paiva and Prasanna Ravi and Goutam Tamvada},
+      title = {{KyberSlash}: Exploiting secret-dependent division timings in Kyber implementations},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2024/1049},
+      year = {2024},
+      url = {https://eprint.iacr.org/2024/1049}
+}
+@misc{cryptoeprint:2024/2051,
+      author = {Alexandre Berzati and Andersson Calle Viera and Maya Chartouny and David Vigilant},
+      title = {Simple Power Analysis assisted Chosen Cipher-Text Attack on {ML}-{KEM}},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2024/2051},
+      year = {2024},
+      url = {https://eprint.iacr.org/2024/2051}
+}
+@misc{clangover,
+  author       = {Antoon Purnal},
+  title        = {clangover},
+  year         = {2025},
+  howpublished = {\url{https://github.com/antoonpurnal/clangover}},
+  note         = {Accessed: 2025-01-20}
+}
+
+
+@article{DBLP:journals/tit/Elgamal85,
+  author       = {Taher El Gamal},
+  title        = {A public key cryptosystem and a signature scheme based on discrete
+                  logarithms},
+  journal      = {{IEEE} Trans. Inf. Theory},
+  volume       = {31},
+  number       = {4},
+  pages        = {469--472},
+  year         = {1985},
+  url          = {https://doi.org/10.1109/TIT.1985.1057074},
+  doi          = {10.1109/TIT.1985.1057074},
+  timestamp    = {Tue, 10 Mar 2020 10:47:50 +0100},
+  biburl       = {https://dblp.org/rec/journals/tit/Elgamal85.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
