--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -857,3 +857,36 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+@inproceedings{DBLP:conf/focs/Shor94,
+  author       = {Peter W. Shor},
+  title        = {Algorithms for Quantum Computation: Discrete Logarithms and Factoring},
+  booktitle    = {35th Annual Symposium on Foundations of Computer Science, Santa Fe,
+                  New Mexico, USA, 20-22 November 1994},
+  pages        = {124--134},
+  publisher    = {{IEEE} Computer Society},
+  year         = {1994},
+  url          = {https://doi.org/10.1109/SFCS.1994.365700},
+  doi          = {10.1109/SFCS.1994.365700},
+  timestamp    = {Thu, 23 Mar 2023 23:57:53 +0100},
+  biburl       = {https://dblp.org/rec/conf/focs/Shor94.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{DBLP:journals/siamcomp/Shor97,
+  author       = {Peter W. Shor},
+  title        = {Polynomial-Time Algorithms for Prime Factorization and Discrete Logarithms
+                  on a Quantum Computer},
+  journal      = {{SIAM} J. Comput.},
+  volume       = {26},
+  number       = {5},
+  pages        = {1484--1509},
+  year         = {1997},
+  url          = {https://doi.org/10.1137/S0097539795293172},
+  doi          = {10.1137/S0097539795293172},
+  timestamp    = {Wed, 14 Nov 2018 10:45:08 +0100},
+  biburl       = {https://dblp.org/rec/journals/siamcomp/Shor97.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
